# barq

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmarks/: barq_app.py  fastapi_app.py  profile_cpu.py  run_benchmark.py  thread_analysis.py
examples/: basic.py  streaming.py
src/barq/: __init__.py  app.py  http.py  server.py  types.py
