[project]
name = "barq"
version = "0.1.0"
description = "A pure-Python HTTP framework built for free-threaded Python"
readme = "README.md"
authors = [
    { name = "Fauzan", email = "im.external@pm.me" }
]
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
]
