[project]
name = "barq"
version = "0.1.0"
description = "A pure-Python HTTP framework built for free-threaded Python 3.13+"
readme = "README.md"
license = "MIT"
authors = [
    { name = "grandimam", email = "im.external@pm.me" }
]
requires-python = ">=3.13"
keywords = [
    "http",
    "framework",
    "web",
    "server",
    "free-threaded",
    "threading",
    "parallel",
    "nogil",
    "pep703",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/grandimam/barq"
Repository = "https://github.com/grandimam/barq"
Issues = "https://github.com/grandimam/barq/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
]
